[gd_scene load_steps=5 format=2]

[ext_resource path="res://NPC.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 16.0

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="NPC" type="KinematicBody2D" groups=[
"npc",
]]
script = ExtResource( 1 )

[node name="TempSprite" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0.001, 0 )
width = 16.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Attack" type="Area2D" parent="."]
visible = false

[node name="VisualHitbox" type="Line2D" parent="Attack"]
points = PoolVector2Array( 8, 0, 24, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 16, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
